# soundlib-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cursor/plans/: soundlib_tui_player_20673fef.plan.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  lib.rs  library.rs  main.rs  playback.rs  player.rs  testsupport.rs
tests/: config_tests.rs  library_tests.rs  player_tests.rs
tests/common/: mod.rs
