[package]
name = "soundlib-rs"
version = "1.0.0"
edition = "2024"
authors = ["Luca Nerlich <luca.nerlich@gmail.com>"]
description = "Terminal music library browser and cliamp remote control"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LucaNerlich/soundlib-rs"
keywords = ["cliamp", "music", "tui", "audio", "terminal"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1"
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
walkdir = "2"

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
serde_yaml_ng = "0.10"
